--- a/HT/1-03.Rmd
+++ b/HT/1-03.Rmd
@@ -19,25 +19,65 @@ output:
 Найдите определитель и собственные значения матриц:
 
 #### а)
+
 $A = \begin{pmatrix}4&-3&-3\\1&2&1\\1&1&2\end{pmatrix}$
 
 **Ответ:**
 
-1) $detA = 4(2×2 - 1×1) - 1(-3×2 - -3×1) + 1(-3×1 - -3×2) = \\=4(4-1) - 1(-6 + 3) + 1(-3+6)=4×3 - 1(-3) + 1×3 = 12 + 3 + 3 = 18$
+1)  $detA = 4(2×2 - 1×1) - 1(-3×2 - -3×1) + 1(-3×1 - -3×2) = \\=4(4-1) - 1(-6 + 3) + 1(-3+6)=4×3 - 1(-3) + 1×3 = 12 + 3 + 3 = 18$
 
-2) $\begin{vmatrix}4-\lambda&-3&-3\\1&2-\lambda&1\\1&1&2-\lambda\end{vmatrix} = 0$
-\[\begin{aligned}
-(4-\lambda)((2-\lambda)^2 - 1) - 1(-3(2-\lambda) - -3×1) + 1(-3×1 - -3(2-\lambda))=0\\
-(4-\lambda)(4-4\lambda+\lambda^2-1)-(-6+3\lambda+3)+(-3-(-6+3\lambda))=0\\
-(4-\lambda)(\lambda^2-4\lambda+3) - (3\lambda-3) + (-3\lambda+3) = 0\\
-(4\lambda^2-16\lambda+12-\lambda^3+4\lambda^2-3\lambda)-3\lambda+3-3\lambda+3=0\\
--\lambda^3+8\lambda^2-25\lambda+18=0\\
-\lambda^3-8\lambda^2+25\lambda-18=0\\
-(\lambda-1)(\lambda^2-7\lambda+18)=0\\
-\end{aligned}\]
-Тогда:
-$(\lambda-1)=0; \lambda_1=1\\$
+2)  $\begin{vmatrix}4-\lambda&-3&-3\\1&2-\lambda&1\\1&1&2-\lambda\end{vmatrix} = 0$
 
-Уравнение ($\lambda^2-7\lambda+18=0$) не имеет действительных корней.
+  > $(4-\lambda)((2-\lambda)^2 - 1) - 1(-3(2-\lambda) - -3×1) + 1(-3×1 - -3(2-\lambda))=0\\$
+  >  $(4-\lambda)(4-4\lambda+\lambda^2-1)-(-6+3\lambda+3)+(-3-(-6+3\lambda))=0\\$
+  >  $(4-\lambda)(\lambda^2-4\lambda+3) - (3\lambda-3) + (-3\lambda+3) = 0\\$
+  >  $(4\lambda^2-16\lambda+12-\lambda^3+4\lambda^2-3\lambda)-3\lambda+3-3\lambda+3=0\\$
+  >  $-\lambda^3+8\lambda^2-25\lambda+18=0\\$
+  >  $\lambda^3-8\lambda^2+25\lambda-18=0\\$
+  >  $(\lambda-1)(\lambda^2-7\lambda+18)=0\\$
+    
+  > Тогда: $(\lambda-1)=0; \lambda_1=1\\$
 
-Ответ: $\lambda_1=1$
+  > Уравнение ($\lambda^2-7\lambda+18=0$) не имеет действительных корней.
+
+  > Ответ: $\lambda_1=1$
+
+#### б)
+
+$A = \begin{pmatrix}2&-1&0\\-1&2&0\\1&-1&1\end{pmatrix}$
+
+**Ответ:**
+
+1)  $detA = 0(-1^2 - 2×1) - 0(-1×2 - -1) + 1(2×2 - (-1×-1)) = \\=4 - (-1)^2 = 4-1 = 3$
+
+2)  $\begin{vmatrix}2-\lambda&-1&0\\-1&2-\lambda&0\\1&-1&1-\lambda\end{vmatrix} = 0$
+
+  >  $(1-\lambda)((2-\lambda)^2 - (-1)^2)=0\\$
+  >  $(1-\lambda)((2-\lambda)^2 - 1)=0\\$
+  >  $(1-\lambda)(4-4\lambda+\lambda^2-1)=0\\$
+  >  $(1-\lambda)(\lambda^2-4\lambda+3)=0\\$
+  >  $(1-\lambda)((\lambda-3)(\lambda-1))=0\\$
+
+  > Ответ: $\lambda_1=3$; $\lambda_2=1$
+
+#### в)
+
+$A = \begin{pmatrix}5&-1&-1\\0&4&-1\\0&-1&4\end{pmatrix}$
+
+**Ответ:**
+
+1)  $detA = 5(4^2 - (-1)^2) - 0 + 0 = 5(16-1) = 5×15 = 75$
+
+2)  $\begin{vmatrix}5-\lambda&-1&-1\\0&4-\lambda&-1\\0&-1&4-\lambda\end{vmatrix} = 0$
+
+  >  $(5-\lambda)((4-\lambda)^2 - (-1)^2)=0\\$
+  >  $(5-\lambda)((4-\lambda)^2 - 1)=0\\$
+  >  $(5-\lambda)(16-8\lambda+\lambda^2-1)=0\\$
+  >  $(5-\lambda)(\lambda^2-8\lambda+15)=0\\$
+  >  $(5-\lambda)((\lambda-5)(\lambda-3))=0\\$
+
+  > Ответ: $\lambda_1=5$; $\lambda_2=3$
+
+## Задача 2
+
+Диагонализируйте следующие матрицы:
