--- a/HT/1-03.Rmd
+++ b/HT/1-03.Rmd
@@ -57,8 +57,6 @@ $A = \begin{pmatrix}2&-1&0\\-1&2&0\\1&-1&1\end{pmatrix}$
   > $(1-\lambda)(4-4\lambda+\lambda^2-1)=0\\*$
   > $(1-\lambda)(\lambda^2-4\lambda+3)=0\\*$
   > $(1-\lambda)((\lambda-1)(\lambda-3))=0\\*$
-  > $(\lambda^2-2\lambda+1)×(\lambda-3)=0\\*$
-  > $(\lambda-1)^2×(\lambda-3)=0\\*$
 
   > Ответ: $\lambda_1=3$; $\lambda_2=1$; $\lambda_3=1$
 
@@ -77,8 +75,6 @@ $A = \begin{pmatrix}5&-1&-1\\0&4&-1\\0&-1&4\end{pmatrix}$
   > $(5-\lambda)(16-8\lambda+\lambda^2-1)=0\\*$
   > $(5-\lambda)(\lambda^2-8\lambda+15)=0\\*$
   > $(5-\lambda)((\lambda-5)(\lambda-3))=0\\*$
-  > $(\lambda^2-10\lambda+25)(\lambda-3)=0\\*$
-  > $(\lambda-5)^2×(\lambda-3)=0\\*$
 
   > Ответ: $\lambda_1=5$; $\lambda_2=5$; $\lambda_3=3$
 
@@ -111,14 +107,14 @@ $\begin{vmatrix}7-\lambda&-4&-2\\-2&5-\lambda&-2\\0&0&9-\lambda\end{vmatrix} = 0
 
 $\begin{aligned}
 \begin{pmatrix}
-  -2 & -4 & -2 & \vrule & 0\\
-  -2 & -4 & -2 & \vrule & 0\\
+  -2 & -4 & -2 & \vrule & 0\\*
+  -2 & -4 & -2 & \vrule & 0\\*
    0 &  0 &  0 & \vrule & 0
 \end{pmatrix}
 \xrightarrow[{(1) \leftarrow (1) \div -2}]{(2) \leftarrow (2) - (1)}
 \begin{pmatrix}
-  1 & 2 & 1 & \vrule & 0\\
-  0 & 0 & 0 & \vrule & 0\\
+  1 & 2 & 1 & \vrule & 0\\*
+  0 & 0 & 0 & \vrule & 0\\*
   0 & 0 & 0 & \vrule & 0
 \end{pmatrix}
 \end{aligned}$
@@ -126,53 +122,53 @@ $\begin{aligned}
   > Данному уравнению удовлетворяют векторы
 
 $\begin{aligned}
-v_1 = 
+\vec{v_1} = \alpha
 \begin{pmatrix}
-  2\\
-  -1\\
+  2\\*
+  -1\\*
   0
 \end{pmatrix}
-\end{aligned}$
+\end{aligned}, \alpha \in \mathbb{R}$
 и
 $\begin{aligned}
-v_2 = 
+\vec{v_2} = \alpha
 \begin{pmatrix}
-  -1\\
-  -2\\
+  -1\\*
+  -2\\*
   5
 \end{pmatrix}
-\end{aligned}$
+\end{aligned}, \alpha \in \mathbb{R}$
 
 > Для $\lambda=3$:
 
 $\begin{aligned}
 \begin{pmatrix}
-  4  & -4 & -2 & \vrule & 0\\
-  -2 & 2  & -2 & \vrule & 0\\
+  4  & -4 & -2 & \vrule & 0\\*
+  -2 & 2  & -2 & \vrule & 0\\*
   0  &  0 &  6 & \vrule & 0
 \end{pmatrix}
 \xrightarrow[{(3) \leftarrow (3) \div 6}]{(1) \leftarrow (1) \div 4}
 \begin{pmatrix}
-  1 & -1 & -\frac{1}{2} & \vrule & 0\\
-  -2 & 2 & -2           & \vrule & 0\\
+  1 & -1 & -\frac{1}{2} & \vrule & 0\\*
+  -2 & 2 & -2           & \vrule & 0\\*
   0 & 0  & 1            & \vrule & 0
 \end{pmatrix}
 \xrightarrow[{}]{(2) \leftarrow (2) + 2×(1)}
 \begin{pmatrix}
-  1 & -1 & -\frac{1}{2} & \vrule & 0\\
-  0 & 0  & -3           & \vrule & 0\\
+  1 & -1 & -\frac{1}{2} & \vrule & 0\\*
+  0 & 0  & -3           & \vrule & 0\\*
   0 & 0  & 1            & \vrule & 0
 \end{pmatrix}
 \xrightarrow[{}]{(2) \leftarrow (2) \div -3}\\
 \begin{pmatrix}
-  1 & -1 & -\frac{1}{2} & \vrule & 0\\
-  0 & 0  & 1            & \vrule & 0\\
+  1 & -1 & -\frac{1}{2} & \vrule & 0\\*
+  0 & 0  & 1            & \vrule & 0\\*
   0 & 0  & 1            & \vrule & 0
 \end{pmatrix}
 \xrightarrow[{(1) \leftarrow (1) + (2) \div 2}]{(3) \leftarrow (3) - (2)}
 \begin{pmatrix}
-  1 & -1 & 0 & \vrule & 0\\
-  0 & 0  & 1 & \vrule & 0\\
+  1 & -1 & 0 & \vrule & 0\\*
+  0 & 0  & 1 & \vrule & 0\\*
   0 & 0  & 0 & \vrule & 0
 \end{pmatrix}
 \end{aligned}$
@@ -180,21 +176,95 @@ $\begin{aligned}
   > Данному уравнению удовлетворяет вектор
 
 $\begin{aligned}
-v_3 = 
+\vec{v_3} = \alpha
 \begin{pmatrix}
-  1\\
-  1\\
+  1\\*
+  1\\*
   0
 \end{pmatrix}
-\end{aligned}$
+\end{aligned}, \alpha \in \mathbb{R}$
 
   > Собственный базис
   $Q = \begin{pmatrix}
-    2  & -1 & 1 \\
-    -1 & -2 & 1\\
+    2  & -1 & 1 \\*
+    -1 & -2 & 1\\*
     0  & 5  & 0
+  \end{pmatrix}$
+  
+  > Диагональная матрица
+  $\Lambda = \begin{pmatrix}
+    9 & 0 & 0 \\*
+    0 & 9 & 0 \\*
+    0 & 0 & 3
   \end{pmatrix}$
   
   > Найдем $Q^{-1}$
   
-  $Q \Lambda Q^{-1}$
+\[\begin{aligned}
+\begin{pmatrix}
+  2  & -1 & 1 & \vrule & 1 & 0 & 0\\*
+  -1 & -2 & 1 & \vrule & 0 & 1 & 0\\*
+  0  &  5 & 0 & \vrule & 0 & 0 & 1
+\end{pmatrix}
+\xrightarrow[{(3) \leftrightarrow (2)}]{(1) \leftarrow (1) \div 2}
+\begin{pmatrix}
+  1  & -\frac{1}{2} & \frac{1}{2} & \vrule & \frac{1}{2} & 0 & 0\\*
+  0  &  5 & 0 & \vrule & 0 & 0 & 1\\*
+  -1 & -2 & 1 & \vrule & 0 & 1 & 0
+\end{pmatrix}
+\xrightarrow[{}]{(3) \leftarrow (3) + (1)}
+\begin{pmatrix}
+  1  & -\frac{1}{2} & \frac{1}{2} & \vrule & \frac{1}{2} & 0 & 0\\*
+  0  &  5 & 0 & \vrule & 0 & 0 & 1\\*
+  0 & -2\frac{1}{2} & 1\frac{1}{2} & \vrule & \frac{1}{2} & 1 & 0
+\end{pmatrix}\\
+\xrightarrow[{}]{(3) \leftarrow (3) + (2) \div 2}
+\begin{pmatrix}
+  1  & -\frac{1}{2} & \frac{1}{2} & \vrule & \frac{1}{2} & 0 & 0\\*
+  0  &  5 & 0 & \vrule & 0 & 0 & 1\\*
+  0 & 0 & 1\frac{1}{2} & \vrule & \frac{1}{2} & 1 & \frac{1}{2}
+\end{pmatrix}
+\xrightarrow[{(3) \leftarrow (3) \div 1,5}]{(2) \leftarrow (2) \div 5}
+\begin{pmatrix}
+  1  & -\frac{1}{2} & \frac{1}{2} & \vrule & \frac{1}{2} & 0 & 0\\*
+  0  &  1 & 0 & \vrule & 0 & 0 & \frac{1}{5}\\*
+  0 & 0 & 1 & \vrule & \frac{1}{3} & \frac{2}{3} & \frac{1}{3}
+\end{pmatrix}
+\xrightarrow[{}]{(1) \leftarrow 1 - (3) \div 2}\\
+\begin{pmatrix}
+  1  & -\frac{1}{2} & 0 & \vrule & \frac{1}{3} & -\frac{1}{3} & -\frac{1}{6}\\*
+  0  &  1 & 0 & \vrule & 0 & 0 & \frac{1}{5}\\*
+  0 & 0 & 1 & \vrule & \frac{1}{3} & \frac{2}{3} & \frac{1}{3}
+\end{pmatrix}
+\xrightarrow[{}]{(1) \leftarrow 1 + (2) \div 2}
+\begin{pmatrix}
+  1  & 0 & 0 & \vrule & \frac{1}{3} & -\frac{1}{3} & -\frac{1}{15}\\*
+  0  &  1 & 0 & \vrule & 0 & 0 & \frac{1}{5}\\*
+  0 & 0 & 1 & \vrule & \frac{1}{3} & \frac{2}{3} & \frac{1}{3}
+\end{pmatrix}
+\end{aligned}\]
+
+  > $Q^{-1} = \begin{pmatrix}
+    \frac{1}{3} & -\frac{1}{3} & -\frac{1}{15}\\*
+    0 & 0 & \frac{1}{5}\\*
+    \frac{1}{3} & \frac{2}{3} & \frac{1}{3}
+  \end{pmatrix}$
+  
+  > Ответ: $A = Q \Lambda Q^{-1}$
+
+\[\begin{pmatrix}7&-4&-2\\-2&5&-2\\0&0&9\end{pmatrix}=
+\begin{pmatrix}
+  2  & -1 & 1 \\*
+  -1 & -2 & 1 \\*
+  0  &  5 & 0
+\end{pmatrix}
+\begin{pmatrix}
+  9 & 0 & 0 \\*
+  0 & 9 & 0 \\*
+  0 & 0 & 3
+\end{pmatrix}
+\begin{pmatrix}
+  \frac{1}{3} & -\frac{1}{3} & -\frac{1}{15}\\*
+  0           &  0           &  \frac{1}{5}\\*
+  \frac{1}{3} &  \frac{2}{3} & \frac{1}{3}
+\end{pmatrix}\]
