--- a/HT/1-03.Rmd
+++ b/HT/1-03.Rmd
@@ -99,7 +99,7 @@ $\begin{vmatrix}7-\lambda&-4&-2\\-2&5-\lambda&-2\\0&0&9-\lambda\end{vmatrix} = 0
   
   > $\lambda_1=9$; $\lambda_2=9$; $\lambda_3=3$
 
-2) Собственные веторы:
+2) Собственные векторы:
 
   > Для $\lambda=9$:
 
@@ -284,7 +284,7 @@ $\begin{vmatrix}3-\lambda&0&0\\1&2\lambda&-1\\1&-1&2-\lambda\end{vmatrix} = 0$
   
   > $\lambda_1=3$; $\lambda_2=3$; $\lambda_3=1$
 
-2) Собственные веторы:
+2) Собственные векторы:
 
   > Для $\lambda=3$:
   
